Name:     faker
Version:  0.0.0.1
Synopsis: Pure Haskell library for generating fake data
Description:
  No description yet
  .
  > 0.0.0.1
  >  - Init version

Author:        Alexey Gaziev
Maintainer:    Alexey Gaziev <alex.gaziev@gmail.com>
Homepage:      https://github.com/gazay/faker
Bug-Reports:   http://github.com/gazay/faker/issues

License:       MIT
License-File:  LICENSE
Category:      Testing
Cabal-Version: >= 1.8
Build-Type:    Simple

Source-Repository head
  Type:     git
  Location: git://github.com/gazay/faker.git

Library
  HS-Source-Dirs: src

  Exposed-Modules:
    Faker

  GHC-Options: -Wall
  Build-Depends: base >= 4.5 && < 5, gimlh >= 0.1.1.0, random, split >= 0.2.0
